cabal-version:       2.4
name:                small-test
version:             0.2.0.1

test-suite small-test
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  build-depends:
                       base
                     , tasty
                     , tasty-hunit
